--- a/index.html
+++ b/index.html
@@ -2,17 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My Gallery</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="header">
-
+        <div class="profile">
+            <img class="profile__image" src="profilePhoto.png" alt="Profile picture">
+            <p class="profile__username">Rodney Cotton</p>
+            <p class="profile__address">Helsinki, Finland</p>
+        </div>
+        <div class="stats">
+            <div class="stats__item stat-item">
+                <span class="stat-item__count">100</span>
+                <span class="stat-item__type">Posts</span>
+            </div>
+            <div class="stats__item stat-item">
+                <span class="stat-item__count">2,242</span>
+                <span class="stat-item__type">Followers</span>
+            </div>
+            <div class="stats__item stat-item">
+                <span class="stat-item__count">1,432</span>
+                <span class="stat-item__type">Following</span>
+            </div>
+        </div>
     </header>
     <main class="main">
-
+        <img class="main__image" src="photo1.png" alt="Gallery photo">
+        <img class="main__image main__image_wide" src="photo2.png" alt="Gallery photo">
+        <img class="main__image main__image_wide" src="photo3.png" alt="Gallery photo">
+        <img class="main__image main__image_high" src="photo_4.png" alt="Gallery photo">
+        <img class="main__image" src="photo5.png" alt="Gallery photo">
+        <img class="main__image" src="photo6.png" alt="Gallery photo">
     </main>
     <footer class="footer">
-
+        <p class="footer__description description">created by <span class="description__username">marlboro gold</span> - devChallenges.io</p>
     </footer>
 </body>
 </html>
